Change Log for OpenXava project
===============================

- Doc for deploying in Tomcat modified to include instructions for Tomcat 10.
- Fix: View with @Files/@File generates a JavaScript error dialog when language is Catalan.
- Fix: Time part not formatted correctly in DateTimeSeparatedCalendar editor with Serbian and Java 8.
- Fix: Time part distorted on modify it in a @DateTime property using DateTimeSeparatedCalendar editor.
- Driver versions in doc and new projects upgraded for PostgreSQL, Oracle, AS/400, Firebird.
- Embedded Tomcat used in development upgraded to 9.0.70.
- Hibernate upgraded to 5.6.14.Final.
- Zero downtime deployment(ZDD) and horizontal scaling support.
- New XFileItem in util package to use as a serializable alternative to FileItem from Apache FileUpload.
- Session data size reduced to a great extent.  
- Fix: User redirected to list mode from detail when an action execution is sent to a different server.
- Fix: Import CSV/Excel failed to work when using cluster of sever instances.
- Fix: Older version of view still used even after the application upgraded to a newer version with ZDD.
- Fix: Error while switching to a collection tab in the detail view after a server restart.

OpenXava 7.0.3 (2022-12-9)
--------------------------
- Hibernate Envers upgraded to 5.6.14.
- Embedded Tomcat used in development upgraded to 9.0.69.
- Driver versions in doc and new projects upgraded for Microsoft SQL Server, Informix and Firebird.
- New property distinct in DescriptionsCalculator to allow not duplicated results.
- Removed Tab.DESCRIPTIONS_LIST_SEPARATOR final variable. 
- Fix: @DescriptionsList in an @ElementCollection depending on a member of the main entity does not work.  
- Fix: Wrong date formatting when pressing ENTER in the field after fill the date. 
- Fix: @OnChange action not executed always on date with time editor when using calendar popup.