@@ -3321,10 +3321,10 @@ class="sy0">=</span><span class="st0">"level"</span><span class="sy0">/&gt;</spa
       part of its engine to generate the user interface. You can modify any of
       this JSP just for your application and in that way customizing the way
       OpenXava works. However, we discourage modifying OpenXava JSPs (with the
-      exception of welcome.jsp and firstSteps.jsp), because although it gives
-      you a lot of flexibility you will have problems when upgrading to a new
-      OpenXava version. Most times, you have other options to modify the way the
-      UI is generated, like:</div>
+      exception of <i>welcome.jsp</i> and <i>firstSteps.jsp</i>), because
+      although it gives you a lot of flexibility you will have problems when
+      upgrading to a new OpenXava version. Most times, you have other options to
+      modify the way the UI is generated, like:</div>
     <div class="wiki" style="display: block;">
       <ul>
         <li>Use <a href="#Customizing-Editors">custom editors</a> to define how
@@ -3340,10 +3340,7 @@ class="sy0">=</span><span class="st0">"level"</span><span class="sy0">/&gt;</spa
     <div class="wiki" style="display: block;">Anyways, if you decide to modify
       OpenXava JSPs. This is the way. First look at the available JPSs in
       OpenXava code in GitHub, here:</div>
-    <div class="wiki" style="display: block;">
-      <meta http-equiv="content-type" content="text/html; charset=utf-8">
-      <meta charset="utf-8">
-    </div>
+    <div class="wiki" style="display: block;"> </div>
     <div class="wiki" style="display: block;"><a href="https://github.com/openxava/openxava/tree/master/openxava/src/main/resources/META-INF/resources">https://github.com/openxava/openxava/tree/master/openxava/src/main/resources/META-INF/resources</a></div>
     <div class="wiki" style="display: block;">There you have two folders, <i>naviox</i>
       and <i>xava</i>. The <i>naviox</i> folder generates the navigation and
