@@ -4382,8 +4382,11 @@ class="br0">)</span><span class="sy0">;</span>
       <h2 id="toc19"><a name="How to ...-How to define your own content for the Welcome page and the First Steps page (new in v5.0)?"></a>How
         to define your own content for the Welcome page and the First Steps page
         <em>(new in v5.0)</em>?</h2>
-      Just edit <em>web/naviox/welcome.jsp</em> and <em>web/naviox/firstSteps.jsp</em>
-      in your project.<br>
+      With v6 or older just edit <em>web/naviox/welcome.jsp</em> and <em>web/naviox/firstSteps.jsp</em>
+      in your project. With v7 or better you have to copy <i>welcome.jsp</i> or
+      <i>firstSteps.jsp</i> from GitHub repository to your project first, follow
+      the <a href="customizing_en.html#modifying-openxava-core-jsps">instructions
+        in customizing documentation</a> to do so.<br>
       <br>
       <h2 id="toc20"><a name="How to ...-How to access to the View object from a custom JSP?"></a>How
         to access to the View object from a custom JSP?</h2>
