@@ -5132,8 +5132,11 @@ class="br0">)</span><span class="sy0">;</span>
       <h2 id="toc18"><a name="Como-definir-tu-propio-contenido-para-la-pagina-de-Bienvenida-y-la-pagina-de-Primeros-pasos-nuevo-en-v5.0"></a>¿Cómo
         definir tu propio contenido para la página de Bienvenida y la página de
         Primeros pasos <em>(nuevo en v5.0)</em>?</h2>
-      Edita <em>web/naviox/welcome.jsp</em> y <em>web/naviox/firstSteps.jsp</em>
-      de tu proyecto.<br>
+      Con la versión 6 o anteriores edita <em>web/naviox/welcome.jsp</em> y <em>web/naviox/firstSteps.jsp</em>
+      de tu proyecto. Con la versión 7 o superior has de copiar primero el <i>welcome.jsp</i>
+      o el <i>firstSteps.jsp</i> desde GitHub a tu proyecto, para ello sigue
+      las <a href="customizing_es.html#modificar-jsps-nucleo-openxava">instrucciones
+        en la documentación de personalización</a>.<br>
       <br>
       <h2 id="toc19"><a name="Como-hacer-que-Required-permita-numeros-positivos-negativos-o-cero-pero-no-vacio"></a>¿Cómo
         hacer que @Required permita números positivos, negativos o cero pero no
